welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: missing arguments for method abs in object Math;
follow this method with `_' if you want to treat it as a partially applied function
	} else if (Math.abs(a-10)= Math.abs(b-10)) {
                        ^